[gd_scene load_steps=4 format=3 uid="uid://c1li540ntoj6d"]

[ext_resource type="Script" uid="uid://50xd6b7no13d" path="res://scripts/Fase_1/card_resposta_fase_1.gd" id="1_gjyn3"]
[ext_resource type="Texture2D" uid="uid://5ssuv2akrne4" path="res://imagens/cards_Fase_1/pg2_a2.png" id="2_1d1mg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_84waf"]
size = Vector2(155, 153)

[node name="CardResposta_Fase_1" type="Area2D"]
script = ExtResource("1_gjyn3")

[node name="SpriteCard_Fase_1" type="Sprite2D" parent="."]
scale = Vector2(0.09, 0.09)
texture = ExtResource("2_1d1mg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_84waf")

[connection signal="input_event" from="." to="." method="_on_input_event"]
