extends Area2D
class_name CardResposta

signal resposta_arrastada(valor)

var valor: int = 0
var posicao_original: Vector2
var fixado: bool = false

@onready var sprite: Sprite2D = $SpriteCard_Fase_1

var _arrastando := false
var _offset: Vector2

func _ready():
	# Configurar posi√ß√£o original
	if posicao_original == Vector2.ZERO:
		posicao_original = global_position
	
	# ‚≠ê CORRE√á√ÉO: Conectar o input_event corretamente
	input_event.connect(_on_input_event)
	input_pickable = true  # ‚≠ê IMPORTANTE: Permitir que receba input
	
	print("‚úÖ Card carregado - Nome: ", name, " - Valor: ", valor)

# ‚≠ê CORRE√á√ÉO: M√©todo configurar melhorado
func configurar(novo_valor: int, _eh_correta: bool) -> void:
	valor = novo_valor
	# ‚≠ê GARANTIR que o valor seja configurado corretamente
	print("üîß Card ", name, " configurado com valor: ", valor)

func _on_input_event(_viewport, event, _shape_idx):
	if fixado:
		return
	
	if event is InputEventMouseButton and event.button_index == MOUSE_BUTTON_LEFT:
		if event.pressed:
			# ‚≠ê CORRE√á√ÉO: Iniciar arrasto
			_iniciar_arrasto()
		else:
			# ‚≠ê CORRE√á√ÉO: Soltar apenas se estava arrastando
			if _arrastando:
				_terminar_arrasto()
	
	# ‚≠ê CORRE√á√ÉO: Movimento do mouse deve ser processado mesmo sem clique
	elif event is InputEventMouseMotion and _arrastando:
		global_position = get_global_mouse_position() + _offset

# ‚≠ê NOVO: M√©todo para iniciar arrasto
func _iniciar_arrasto():
	_arrastando = true
	_offset = global_position - get_global_mouse_position()
	
	# ‚≠ê CORRE√á√ÉO: Trazer para frente quando arrastado
	z_index = 10
	
	get_viewport().set_input_as_handled()
	print("üîÑ Iniciando arrasto do card: ", name, " - Valor: ", valor)

# ‚≠ê NOVO: M√©todo para terminar arrasto
func _terminar_arrasto():
	_arrastando = false
	z_index = 0  # ‚≠ê Voltar ao z_index normal
	
	# ‚≠ê CORRE√á√ÉO: Processar soltura
	_processar_soltura()

# ‚≠ê CORRE√á√ÉO: M√©todo melhorado para processar soltura
func _processar_soltura():
	print("üîÑ Soltando card: ", name, " - Valor: ", valor)
	
	var areas_sobrepostas = get_overlapping_areas()
	var area_resposta_proxima = null
	var menor_distancia = 100.0  # ‚≠ê Aumentei a dist√¢ncia m√°xima
	
	# ‚≠ê CORRE√á√ÉO: Buscar √°reas de resposta espec√≠ficas
	for area in areas_sobrepostas:
		# ‚≠ê VERIFICAR se √© uma √°rea de resposta v√°lida
		if area.has_method("get_valor_esperado") or area is AreaResposta:
			var distancia = global_position.distance_to(area.global_position)
			print("üìè √Årea encontrada a dist√¢ncia: ", distancia)
			
			if distancia < menor_distancia:
				menor_distancia = distancia
				area_resposta_proxima = area
	
	if area_resposta_proxima:
		print("üéØ Card ", valor, " solto perto da √°rea - Dist√¢ncia: ", menor_distancia)
		
		# ‚≠ê CORRE√á√ÉO: Usar tween para anima√ß√£o suave
		var tween = create_tween()
		tween.tween_property(self, "global_position", area_resposta_proxima.global_position, 0.2)
		tween.tween_callback(_emitir_sinal.bind(area_resposta_proxima))
	else:
		print("‚ùå Nenhuma √°rea pr√≥xima - voltando para posi√ß√£o original")
		voltar_para_original()

# ‚≠ê NOVO: Emitir sinal ap√≥s anima√ß√£o
func _emitir_sinal(area):
	print("üì¢ Emitindo sinal para √°rea - Card valor: ", valor)
	emit_signal("resposta_arrastada", valor)
	
	# ‚≠ê CORRE√á√ÉO: Tamb√©m notificar a √°rea diretamente se poss√≠vel
	if area.has_method("receber_card"):
		area.receber_card(self)

func get_valor() -> int:
	return valor

func voltar_para_original():
	print("‚Ü©Ô∏è Voltando card ", name, " para posi√ß√£o original")
	var tween = create_tween()
	tween.tween_property(self, "global_position", posicao_original, 0.3)

func fixar_na_posicao_atual():
	if fixado:
		return
		
	fixado = true
	_arrastando = false
	
	# ‚≠ê CORRE√á√ÉO: Configura√ß√µes visuais e de colis√£o
	modulate = Color(0.7, 0.7, 0.7)  # Escurecer um pouco
	collision_layer = 0  # N√£o colidir mais
	collision_mask = 0   # N√£o detectar mais colis√µes
	input_pickable = false  # ‚≠ê IMPEDIR input quando fixado
	
	print("üìå Card ", name, " FIXADO! - Valor: ", valor)

func liberar_card():
	if not fixado:
		return
		
	fixado = false
	modulate = Color.WHITE
	collision_layer = 1  # ‚≠ê AJUSTAR conforme sua configura√ß√£o
	collision_mask = 1   # ‚≠ê AJUSTAR conforme sua configura√ß√£o
	input_pickable = true
	
	print("üîì Card ", name, " liberado - Valor: ", valor)

# ‚≠ê NOVO: M√©todo para debug
func _process(_delta):
	if _arrastando:
		# Manter posi√ß√£o atualizada durante arrasto
		global_position = get_global_mouse_position() + _offset

# ‚≠ê NOVO: Garantir que o mouse seja liberado se o card for removido
func _exit_tree():
	if _arrastando:
		_arrastando = false
